# rag-dog

./: .env.example  .gitignore  CONTEXT.md  README.md  docker-compose.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_multi_user_rls.py
backend/app/: config.py  db.py  deps.py  lang.py  main.py  models.py  schemas.py  storage.py
backend/app/api/: admin.py  auth.py  conversations.py  documents.py  query.py
backend/app/channels/: base.py  line.py  telegram.py
backend/app/generation/: llm.py  pipeline.py  prompt.py
backend/app/ingestion/: chunk.py  parse.py  pipeline.py
backend/app/retrieval/: embed.py  rewrite.py  search.py
backend/app/security/: google.py  session.py  verify.py
backend/tests/: conftest.py  test_admin_api.py  test_auth_api.py  test_config.py  test_conversations_api.py  test_deps.py  test_documents_api.py  test_harness.py  test_ingestion_storage.py  test_migration_rls.py  test_models.py  test_query_api.py  test_routes.py  test_session_token.py  test_storage.py
docs/adr/: 0001-pgvector-over-dedicated.md  0002-dense-only-retrieval.md  0003-cloudflare-tunnel-webhooks-only.md  0004-multi-user-production-pivot.md  0005-postgres-rls-tenant-isolation.md  0006-react-native-expo-mobile.md
docs/superpowers/plans/: 2026-06-02-backend-multi-user-foundation.md  (+4 more)
frontend/: package.json  pnpm-lock.yaml  vitest.config.ts
mobile/: README.md  app.json  eas.json  eslint.config.js  package.json  pnpm-lock.yaml
ops/cloudflared/: README.md  config.yml.example
ops/ollama/: pull-models.sh
(+42 files in other folders)
