[project]
name = "rag-dog-backend"
version = "0.1.0"
description = "FastAPI service for the rag-dog single-user RAG POC."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",
    "alembic>=1.13.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.20",
    "httpx>=0.27.0",
    "pypdf>=5.1.0",
    "python-docx>=1.1.2",
    "tiktoken>=0.8.0",
    "google-auth>=2.35.0",
    "pyjwt>=2.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "anyio>=4.6.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# One event loop for the whole session so the async engine connection pools stay
# bound to a single loop across tests (otherwise asyncpg raises "attached to a
# different loop" when a pooled connection is reused under a new per-test loop).
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
